fix spacing around nav bar and post

--- a/frontend/src/Navigation.css
+++ b/frontend/src/Navigation.css
@@ -1,6 +1,5 @@
 .NavBar {
     width: 100%;
-    height: 90px;
     box-shadow: 0 4px 5px 1px 
         rgba(0, 0, 0, 0.05);
     background-color: #ffffff;
@@ -19,17 +18,15 @@
 }
 
 .navbarLink, .Home, .Topics, .FindResource {
-    position: inline;
     display: inline-block;
     border: none;
     background-color: transparent;
-    height: 22px;
     width: max-content;
     line-height: normal;
     letter-spacing: normal;
     color: #555555;
     text-align: left;
-    margin: 14px 30px 16px 30px
+    margin: 14px 30px;
 }
 
 .Home:hover, .Topics:hover, .FindResource:hover {
